// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge matches the visual baseline when active 1`] = `
{
  "attrs": {
    "class": "inline-flex items-center gap-1.5 text-xs font-semibold px-2.5 py-1 rounded-full bg-blue-900/50 text-blue-300 border border-blue-700",
  },
  "children": [
    {
      "attrs": {
        "class": "w-1.5 h-1.5 rounded-full bg-blue-400 animate-pulse",
      },
      "children": [],
      "tag": "span",
    },
    "Active",
  ],
  "tag": "span",
}
`;

exports[`StatusBadge matches the visual baseline when cancelled 1`] = `
{
  "attrs": {
    "class": "inline-flex items-center gap-1.5 text-xs font-semibold px-2.5 py-1 rounded-full bg-slate-800 text-slate-400 border border-slate-600",
  },
  "children": [
    "Cancelled",
  ],
  "tag": "span",
}
`;

exports[`StatusBadge matches the visual baseline when executed 1`] = `
{
  "attrs": {
    "class": "inline-flex items-center gap-1.5 text-xs font-semibold px-2.5 py-1 rounded-full bg-purple-900/50 text-purple-300 border border-purple-700",
  },
  "children": [
    "Executed",
  ],
  "tag": "span",
}
`;

exports[`StatusBadge matches the visual baseline when failed 1`] = `
{
  "attrs": {
    "class": "inline-flex items-center gap-1.5 text-xs font-semibold px-2.5 py-1 rounded-full bg-red-900/50 text-red-300 border border-red-700",
  },
  "children": [
    "Failed",
  ],
  "tag": "span",
}
`;

exports[`StatusBadge matches the visual baseline when passed 1`] = `
{
  "attrs": {
    "class": "inline-flex items-center gap-1.5 text-xs font-semibold px-2.5 py-1 rounded-full bg-green-900/50 text-green-300 border border-green-700",
  },
  "children": [
    "Passed",
  ],
  "tag": "span",
}
`;

exports[`StatusBadge matches the visual baseline when pending 1`] = `
{
  "attrs": {
    "class": "inline-flex items-center gap-1.5 text-xs font-semibold px-2.5 py-1 rounded-full bg-amber-900/50 text-amber-300 border border-amber-700",
  },
  "children": [
    "Pending",
  ],
  "tag": "span",
}
`;
